--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infoscreen-frontend",
+  "name": "infocreen-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-router": "^1.88.0",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/router-devtools": "^1.88.0",
+    "@tanstack/router-plugin": "^1.87.13",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
